--- a/attendance_manage/dialog_staff_form.ui
+++ b/attendance_manage/dialog_staff_form.ui
@@ -82,23 +82,10 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>250</y>
+     <y>240</y>
      <width>301</width>
      <height>31</height>
     </rect>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="pushButton_card">
-   <property name="geometry">
-    <rect>
-     <x>120</x>
-     <y>210</y>
-     <width>89</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>RFID 등록</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_accept">
@@ -125,6 +112,19 @@
    </property>
    <property name="text">
     <string>취소</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>120</x>
+     <y>220</y>
+     <width>101</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>RFID CARD ID</string>
    </property>
   </widget>
  </widget>
