--- a/attendance_manage/dialog_staff_form.ui
+++ b/attendance_manage/dialog_staff_form.ui
@@ -82,7 +82,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>240</y>
+     <y>250</y>
      <width>301</width>
      <height>31</height>
     </rect>
@@ -117,14 +117,27 @@
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>220</y>
+     <x>20</x>
+     <y>230</y>
      <width>101</width>
      <height>17</height>
     </rect>
    </property>
    <property name="text">
     <string>RFID CARD ID</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_rfid_con">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>210</y>
+     <width>89</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>RFID 연결</string>
    </property>
   </widget>
  </widget>
