--- a/attendance_manage/dialog_staff_form.ui
+++ b/attendance_manage/dialog_staff_form.ui
@@ -74,7 +74,17 @@
      <widget class="QLineEdit" name="lineEdit_age"/>
     </item>
     <item row="4" column="1">
-     <widget class="QLineEdit" name="lineEdit_phone"/>
+     <widget class="QLineEdit" name="lineEdit_phone">
+      <property name="inputMask">
+       <string>999-9999-9999</string>
+      </property>
+      <property name="text">
+       <string>--</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
@@ -86,6 +96,9 @@
      <width>301</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_accept">
