--- a/attendance_manage/dialog_staff_form.ui
+++ b/attendance_manage/dialog_staff_form.ui
@@ -68,10 +68,18 @@
      </widget>
     </item>
     <item row="1" column="1">
-     <widget class="QLineEdit" name="lineEdit_name"/>
+     <widget class="QLineEdit" name="lineEdit_name">
+      <property name="maxLength">
+       <number>20</number>
+      </property>
+     </widget>
     </item>
     <item row="2" column="1">
-     <widget class="QLineEdit" name="lineEdit_age"/>
+     <widget class="QLineEdit" name="lineEdit_age">
+      <property name="maxLength">
+       <number>3</number>
+      </property>
+     </widget>
     </item>
     <item row="4" column="1">
      <widget class="QLineEdit" name="lineEdit_phone">
