--- a/attendance_manage/mainwindow_dashboard.ui
+++ b/attendance_manage/mainwindow_dashboard.ui
@@ -81,11 +81,11 @@
      <attribute name="title">
       <string>사원관리</string>
      </attribute>
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="pushButton_add">
       <property name="geometry">
        <rect>
-        <x>300</x>
-        <y>10</y>
+        <x>1020</x>
+        <y>580</y>
         <width>89</width>
         <height>25</height>
        </rect>
@@ -94,25 +94,106 @@
        <string>사원추가</string>
       </property>
      </widget>
-     <widget class="QTableWidget" name="tableWidget">
+     <widget class="QGroupBox" name="groupBox">
       <property name="geometry">
        <rect>
         <x>10</x>
         <y>10</y>
         <width>281</width>
-        <height>581</height>
+        <height>591</height>
        </rect>
       </property>
-      <column>
-       <property name="text">
-        <string>이름</string>
+      <property name="title">
+       <string>사원 목록</string>
+      </property>
+      <widget class="QTableWidget" name="tableWidget">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>30</y>
+         <width>261</width>
+         <height>551</height>
+        </rect>
        </property>
-      </column>
-      <column>
-       <property name="text">
-        <string>전화번호</string>
+       <attribute name="horizontalHeaderStretchLastSection">
+        <bool>true</bool>
+       </attribute>
+       <column>
+        <property name="text">
+         <string>이름</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>전화번호</string>
+        </property>
+       </column>
+      </widget>
+     </widget>
+     <widget class="QGroupBox" name="groupBox_2">
+      <property name="geometry">
+       <rect>
+        <x>300</x>
+        <y>10</y>
+        <width>801</width>
+        <height>561</height>
+       </rect>
+      </property>
+      <property name="title">
+       <string>사원 정보</string>
+      </property>
+      <widget class="QTableWidget" name="tableWidget_info">
+       <property name="geometry">
+        <rect>
+         <x>405</x>
+         <y>60</y>
+         <width>381</width>
+         <height>491</height>
+        </rect>
        </property>
-      </column>
+       <attribute name="horizontalHeaderDefaultSectionSize">
+        <number>130</number>
+       </attribute>
+       <attribute name="horizontalHeaderHighlightSections">
+        <bool>true</bool>
+       </attribute>
+       <attribute name="horizontalHeaderMinimumSectionSize">
+        <number>20</number>
+       </attribute>
+       <attribute name="horizontalHeaderStretchLastSection">
+        <bool>true</bool>
+       </attribute>
+       <row>
+        <property name="text">
+         <string>1</string>
+        </property>
+       </row>
+       <column>
+        <property name="text">
+         <string>출근 일시</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>퇴근 일시</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>상태</string>
+        </property>
+       </column>
+       <item row="0" column="0">
+        <property name="text">
+         <string>2019.06.21 09:00</string>
+        </property>
+       </item>
+       <item row="0" column="1">
+        <property name="text">
+         <string>2019.06.21 18:00</string>
+        </property>
+       </item>
+      </widget>
      </widget>
     </widget>
    </widget>
