--- a/attendance_manage/mainwindow_dashboard.ui
+++ b/attendance_manage/mainwindow_dashboard.ui
@@ -40,14 +40,14 @@
    <widget class="QTabWidget" name="tabWidget">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>60</y>
+      <x>10</x>
+      <y>64</y>
       <width>1121</width>
       <height>641</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -119,7 +119,7 @@
       <widget class="QPushButton" name="pushButton_add">
        <property name="geometry">
         <rect>
-         <x>10</x>
+         <x>90</x>
          <y>550</y>
          <width>89</width>
          <height>25</height>
@@ -197,8 +197,8 @@
       <widget class="QLineEdit" name="lineEdit_name">
        <property name="geometry">
         <rect>
-         <x>180</x>
-         <y>109</y>
+         <x>120</x>
+         <y>60</y>
          <width>161</width>
          <height>25</height>
         </rect>
@@ -210,8 +210,8 @@
       <widget class="QLineEdit" name="lineEdit_age">
        <property name="geometry">
         <rect>
-         <x>180</x>
-         <y>149</y>
+         <x>120</x>
+         <y>100</y>
          <width>161</width>
          <height>25</height>
         </rect>
@@ -223,8 +223,8 @@
       <widget class="QLineEdit" name="lineEdit_phone">
        <property name="geometry">
         <rect>
-         <x>180</x>
-         <y>189</y>
+         <x>120</x>
+         <y>140</y>
          <width>161</width>
          <height>25</height>
         </rect>
@@ -236,8 +236,8 @@
       <widget class="QLineEdit" name="lineEdit_card">
        <property name="geometry">
         <rect>
-         <x>180</x>
-         <y>229</y>
+         <x>120</x>
+         <y>180</y>
          <width>161</width>
          <height>25</height>
         </rect>
@@ -249,8 +249,8 @@
       <widget class="QLabel" name="label_2">
        <property name="geometry">
         <rect>
-         <x>130</x>
-         <y>110</y>
+         <x>70</x>
+         <y>61</y>
          <width>41</width>
          <height>21</height>
         </rect>
@@ -267,8 +267,8 @@
       <widget class="QLabel" name="label_3">
        <property name="geometry">
         <rect>
-         <x>130</x>
-         <y>149</y>
+         <x>70</x>
+         <y>100</y>
          <width>41</width>
          <height>21</height>
         </rect>
@@ -285,8 +285,8 @@
       <widget class="QLabel" name="label_4">
        <property name="geometry">
         <rect>
-         <x>100</x>
-         <y>189</y>
+         <x>40</x>
+         <y>140</y>
          <width>71</width>
          <height>21</height>
         </rect>
@@ -303,8 +303,8 @@
       <widget class="QLabel" name="label_5">
        <property name="geometry">
         <rect>
-         <x>100</x>
-         <y>229</y>
+         <x>40</x>
+         <y>180</y>
          <width>71</width>
          <height>21</height>
         </rect>
@@ -316,6 +316,32 @@
        </property>
        <property name="text">
         <string>RFID KEY</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="pushButton_mod">
+       <property name="geometry">
+        <rect>
+         <x>60</x>
+         <y>220</y>
+         <width>89</width>
+         <height>25</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>정보수정</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="pushButton_del">
+       <property name="geometry">
+        <rect>
+         <x>200</x>
+         <y>220</y>
+         <width>89</width>
+         <height>25</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>정보 삭제</string>
        </property>
       </widget>
      </widget>
