add calc current time for clock in/out

--- a/attendance_manage/mainwindow_dashboard.ui
+++ b/attendance_manage/mainwindow_dashboard.ui
@@ -404,6 +404,19 @@
      <string>(주) 가나다라마바사</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label_8">
+    <property name="geometry">
+     <rect>
+      <x>410</x>
+      <y>40</y>
+      <width>341</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <widget class="QMenuBar" name="menuBar">
