--- a/attendance_manage/mainwindow_dashboard.ui
+++ b/attendance_manage/mainwindow_dashboard.ui
@@ -47,7 +47,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -189,6 +189,52 @@
         <string>상태</string>
        </property>
       </column>
+     </widget>
+     <widget class="QLabel" name="label_9">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>161</y>
+        <width>161</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>15</pointsize>
+        <weight>50</weight>
+        <bold>false</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>오늘의 출근 시간  : </string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_clock_in">
+      <property name="geometry">
+       <rect>
+        <x>200</x>
+        <y>160</y>
+        <width>111</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>15</pointsize>
+        <weight>50</weight>
+        <bold>false</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>00시 00분</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+      </property>
      </widget>
     </widget>
     <widget class="QWidget" name="tab_2">
@@ -474,16 +520,24 @@
      <x>0</x>
      <y>0</y>
      <width>1144</width>
-     <height>22</height>
+     <height>28</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menu">
+    <property name="title">
+     <string>메뉴</string>
+    </property>
+    <addaction name="action_3"/>
+    <addaction name="action"/>
+   </widget>
+   <addaction name="menu"/>
   </widget>
-  <action name="action">
+  <action name="action_3">
    <property name="text">
     <string>설정</string>
    </property>
   </action>
-  <action name="action_2">
+  <action name="action">
    <property name="text">
     <string>종료</string>
    </property>
