--- a/attendance_manage/mainwindow_dashboard.ui
+++ b/attendance_manage/mainwindow_dashboard.ui
@@ -47,7 +47,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -156,12 +156,15 @@
        <rect>
         <x>10</x>
         <y>260</y>
-        <width>551</width>
+        <width>621</width>
         <height>331</height>
        </rect>
       </property>
       <attribute name="horizontalHeaderDefaultSectionSize">
-       <number>135</number>
+       <number>160</number>
+      </attribute>
+      <attribute name="horizontalHeaderMinimumSectionSize">
+       <number>10</number>
       </attribute>
       <attribute name="horizontalHeaderStretchLastSection">
        <bool>true</bool>
@@ -305,10 +308,10 @@
       <widget class="QTableWidget" name="tableWidget_info">
        <property name="geometry">
         <rect>
-         <x>375</x>
-         <y>60</y>
-         <width>411</width>
-         <height>491</height>
+         <x>45</x>
+         <y>270</y>
+         <width>741</width>
+         <height>281</height>
         </rect>
        </property>
        <attribute name="horizontalHeaderDefaultSectionSize">
@@ -342,8 +345,8 @@
       <widget class="QLineEdit" name="lineEdit_name">
        <property name="geometry">
         <rect>
-         <x>120</x>
-         <y>60</y>
+         <x>350</x>
+         <y>59</y>
          <width>161</width>
          <height>25</height>
         </rect>
@@ -355,8 +358,8 @@
       <widget class="QLineEdit" name="lineEdit_age">
        <property name="geometry">
         <rect>
-         <x>120</x>
-         <y>100</y>
+         <x>350</x>
+         <y>99</y>
          <width>161</width>
          <height>25</height>
         </rect>
@@ -368,8 +371,8 @@
       <widget class="QLineEdit" name="lineEdit_phone">
        <property name="geometry">
         <rect>
-         <x>120</x>
-         <y>140</y>
+         <x>350</x>
+         <y>139</y>
          <width>161</width>
          <height>25</height>
         </rect>
@@ -381,8 +384,8 @@
       <widget class="QLineEdit" name="lineEdit_card">
        <property name="geometry">
         <rect>
-         <x>120</x>
-         <y>180</y>
+         <x>350</x>
+         <y>179</y>
          <width>161</width>
          <height>25</height>
         </rect>
@@ -394,8 +397,8 @@
       <widget class="QLabel" name="label_2">
        <property name="geometry">
         <rect>
-         <x>70</x>
-         <y>61</y>
+         <x>300</x>
+         <y>60</y>
          <width>41</width>
          <height>21</height>
         </rect>
@@ -412,8 +415,8 @@
       <widget class="QLabel" name="label_3">
        <property name="geometry">
         <rect>
-         <x>70</x>
-         <y>100</y>
+         <x>300</x>
+         <y>99</y>
          <width>41</width>
          <height>21</height>
         </rect>
@@ -430,8 +433,8 @@
       <widget class="QLabel" name="label_4">
        <property name="geometry">
         <rect>
-         <x>40</x>
-         <y>140</y>
+         <x>270</x>
+         <y>139</y>
          <width>71</width>
          <height>21</height>
         </rect>
@@ -448,8 +451,8 @@
       <widget class="QLabel" name="label_5">
        <property name="geometry">
         <rect>
-         <x>40</x>
-         <y>180</y>
+         <x>270</x>
+         <y>179</y>
          <width>71</width>
          <height>21</height>
         </rect>
@@ -466,8 +469,8 @@
       <widget class="QPushButton" name="pushButton_mod">
        <property name="geometry">
         <rect>
-         <x>60</x>
-         <y>220</y>
+         <x>290</x>
+         <y>219</y>
          <width>89</width>
          <height>25</height>
         </rect>
@@ -479,8 +482,8 @@
       <widget class="QPushButton" name="pushButton_del">
        <property name="geometry">
         <rect>
-         <x>200</x>
-         <y>220</y>
+         <x>430</x>
+         <y>219</y>
          <width>89</width>
          <height>25</height>
         </rect>
