--- a/attendance_manage/dialog_staff_form.ui
+++ b/attendance_manage/dialog_staff_form.ui
@@ -6,20 +6,23 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>336</width>
-    <height>359</height>
+    <width>379</width>
+    <height>443</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>사원 정보</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(242,242,242);</string>
+  </property>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>331</width>
-     <height>31</height>
+     <x>0</x>
+     <y>0</y>
+     <width>381</width>
+     <height>61</height>
     </rect>
    </property>
    <property name="font">
@@ -29,81 +32,28 @@
      <bold>true</bold>
     </font>
    </property>
+   <property name="styleSheet">
+    <string notr="true">border-image: url(:/image/button.jpg);
+color: rgb(255, 255, 255);</string>
+   </property>
    <property name="text">
-    <string>사원 등록 정보</string>
+    <string>사원 등록</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QWidget" name="gridLayoutWidget">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>70</y>
-     <width>301</width>
-     <height>121</height>
-    </rect>
-   </property>
-   <layout class="QGridLayout" name="gridLayout">
-    <item row="2" column="0">
-     <widget class="QLabel" name="label_3">
-      <property name="text">
-       <string>나이</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="0">
-     <widget class="QLabel" name="label_2">
-      <property name="text">
-       <string>이름</string>
-      </property>
-     </widget>
-    </item>
-    <item row="4" column="0">
-     <widget class="QLabel" name="label_4">
-      <property name="text">
-       <string>전화번호</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="1">
-     <widget class="QLineEdit" name="lineEdit_name">
-      <property name="maxLength">
-       <number>20</number>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="1">
-     <widget class="QLineEdit" name="lineEdit_age">
-      <property name="maxLength">
-       <number>3</number>
-      </property>
-     </widget>
-    </item>
-    <item row="4" column="1">
-     <widget class="QLineEdit" name="lineEdit_phone">
-      <property name="inputMask">
-       <string>999-9999-9999</string>
-      </property>
-      <property name="text">
-       <string>--</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignCenter</set>
-      </property>
-     </widget>
-    </item>
-   </layout>
-  </widget>
   <widget class="QLineEdit" name="lineEdit_card_id">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>250</y>
-     <width>301</width>
+     <y>340</y>
+     <width>341</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-image: url(:/image/text_field.jpg);</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
@@ -112,11 +62,15 @@
   <widget class="QPushButton" name="pushButton_accept">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>310</y>
-     <width>89</width>
-     <height>25</height>
+     <x>30</x>
+     <y>390</y>
+     <width>141</width>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-image: url(:/image/button.jpg);
+color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
     <string>완료</string>
@@ -126,7 +80,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>230</y>
+     <y>320</y>
      <width>101</width>
      <height>17</height>
     </rect>
@@ -138,11 +92,15 @@
   <widget class="QPushButton" name="pushButton_rfid_con">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>210</y>
-     <width>89</width>
-     <height>25</height>
+     <x>260</x>
+     <y>290</y>
+     <width>101</width>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-image: url(:/image/button.jpg);
+color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
     <string>RFID 연결</string>
@@ -151,14 +109,126 @@
   <widget class="QPushButton" name="pushButton_cancel">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>310</y>
-     <width>89</width>
-     <height>25</height>
+     <x>220</x>
+     <y>390</y>
+     <width>141</width>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-image: url(:/image/button.jpg);
+color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
     <string>취소</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_name">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>110</y>
+     <width>341</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-image: url(:/image/text_field.jpg);</string>
+   </property>
+   <property name="maxLength">
+    <number>20</number>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+   <property name="placeholderText">
+    <string>성함을 입력하세요.</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_age">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>180</y>
+     <width>341</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-image: url(:/image/text_field.jpg);</string>
+   </property>
+   <property name="maxLength">
+    <number>3</number>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+   <property name="placeholderText">
+    <string>나이를 입력하세요</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_phone">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>250</y>
+     <width>341</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-image: url(:/image/text_field.jpg);</string>
+   </property>
+   <property name="inputMask">
+    <string>999-9999-9999</string>
+   </property>
+   <property name="text">
+    <string>--</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+   <property name="placeholderText">
+    <string>전화번호를 입력하세요</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_6">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>90</y>
+     <width>101</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>이름</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_7">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>160</y>
+     <width>101</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>나이</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_8">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>230</y>
+     <width>101</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>전화번호</string>
    </property>
   </widget>
  </widget>
