--- a/attendance_manage/mainwindow_dashboard.ui
+++ b/attendance_manage/mainwindow_dashboard.ui
@@ -118,7 +118,7 @@ color: rgb(255, 255, 255);</string>
        <property name="geometry">
         <rect>
          <x>60</x>
-         <y>340</y>
+         <y>360</y>
          <width>301</width>
          <height>31</height>
         </rect>
@@ -127,14 +127,14 @@ color: rgb(255, 255, 255);</string>
         <string notr="true"/>
        </property>
        <property name="value">
-        <number>24</number>
+        <number>0</number>
        </property>
       </widget>
       <widget class="QLabel" name="label_13">
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>340</y>
+         <y>360</y>
          <width>41</width>
          <height>31</height>
         </rect>
@@ -190,7 +190,7 @@ color: rgb(255, 255, 255);</string>
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>390</y>
+         <y>410</y>
          <width>41</width>
          <height>31</height>
         </rect>
@@ -203,13 +203,13 @@ color: rgb(255, 255, 255);</string>
        <property name="geometry">
         <rect>
          <x>60</x>
-         <y>390</y>
+         <y>410</y>
          <width>301</width>
          <height>31</height>
         </rect>
        </property>
        <property name="value">
-        <number>24</number>
+        <number>0</number>
        </property>
       </widget>
       <widget class="QLabel" name="label_7">
@@ -245,7 +245,7 @@ color: rgb(255, 255, 255);</string>
        <property name="geometry">
         <rect>
          <x>60</x>
-         <y>290</y>
+         <y>310</y>
          <width>301</width>
          <height>31</height>
         </rect>
@@ -254,14 +254,14 @@ color: rgb(255, 255, 255);</string>
         <string notr="true"/>
        </property>
        <property name="value">
-        <number>24</number>
+        <number>0</number>
        </property>
       </widget>
       <widget class="QLabel" name="label_12">
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>290</y>
+         <y>310</y>
          <width>41</width>
          <height>31</height>
         </rect>
@@ -309,6 +309,32 @@ color: rgb(255, 255, 255);</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_15">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>277</y>
+         <width>67</width>
+         <height>17</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_16">
+       <property name="geometry">
+        <rect>
+         <x>90</x>
+         <y>270</y>
+         <width>67</width>
+         <height>17</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>TextLabel</string>
        </property>
       </widget>
      </widget>
