--- a/attendance_manage/mainwindow_dashboard.ui
+++ b/attendance_manage/mainwindow_dashboard.ui
@@ -316,25 +316,38 @@ color: rgb(255, 255, 255);</string>
         <rect>
          <x>10</x>
          <y>277</y>
-         <width>67</width>
+         <width>71</width>
          <height>17</height>
         </rect>
        </property>
        <property name="text">
-        <string/>
+        <string>총 사원 수 : </string>
        </property>
       </widget>
       <widget class="QLabel" name="label_16">
        <property name="geometry">
         <rect>
-         <x>90</x>
+         <x>100</x>
          <y>270</y>
-         <width>67</width>
-         <height>17</height>
+         <width>41</width>
+         <height>31</height>
         </rect>
        </property>
        <property name="text">
-        <string>TextLabel</string>
+        <string>0</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_17">
+       <property name="geometry">
+        <rect>
+         <x>130</x>
+         <y>270</y>
+         <width>41</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>명</string>
        </property>
       </widget>
      </widget>
